--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,3 +81,6 @@ GlobalDefaultServerGameMode=None
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
+bRemoteExecution=True
+
