fix possess replication

--- a/SMLTest.uproject
+++ b/SMLTest.uproject
@@ -36,6 +36,11 @@
 		{
 			"Name": "PythonScriptPlugin",
 			"Enabled": true
+		},
+		{
+			"Name": "SetupUEr",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/c6ae5bea262a45dfa8bf1c718c2284ec"
 		}
 	]
 }
