added thta phi guns and made cone guns into it's own class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,3 +84,6 @@ GlobalDefaultServerGameMode=None
 [/Script/PythonScriptPlugin.PythonScriptPluginSettings]
 bRemoteExecution=True
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/SMLTest.ShootableGun.Firerate",NewName="/Script/SMLTest.ShootableGun.FireRate")
