--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,7 +21,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/map0.map0
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode0.GameMode0_C
+GlobalDefaultGameMode=/Game/Blueprints/SMLGameModeBP.SMLGameModeBP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.CollisionProfile]
