Fixed more bugs with respawning and added player caps to classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,4 +100,5 @@ bRemoteExecution=True
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/SMLTest.ShootableGun.Firerate",NewName="/Script/SMLTest.ShootableGun.FireRate")
++PropertyRedirects=(OldName="/Script/SMLTest.SMLPlayerController.LastTeam",NewName="/Script/SMLTest.SMLPlayerController.Team")
 
