--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,6 +63,7 @@ GlobalDefaultServerGameMode=None
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="ProjectileTrace",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Projectile",Response=ECR_Ignore)),HelpMessage="Collision setup for traced projectiles")
 +Profiles=(Name="ProjectilePhysical",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="Projectile",Response=ECR_Ignore)),HelpMessage="Collision setup for projectiles that simulates physics")
++Profiles=(Name="GunDestructible",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Pawn",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Projectile",Response=ECR_Overlap)),HelpMessage="Used for guns when they can take damage")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Projectile",Response=ECR_Overlap)))
 +EditProfiles=(Name="Spectator",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
@@ -74,6 +75,8 @@ GlobalDefaultServerGameMode=None
 +EditProfiles=(Name="Vehicle",CustomResponses=((Channel="Projectile",Response=ECR_Overlap)))
 +EditProfiles=(Name="UI",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 +EditProfiles=(Name="Destructible",CustomResponses=((Channel="Projectile",Response=ECR_Overlap)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
